group and optimize dep

--- a/index.html
+++ b/index.html
@@ -276,35 +276,6 @@
         <div class="progress-fill"></div>
       </div>
 
-      <div class="features">
-        <div class="feature">
-          <div class="feature-icon">📊</div>
-          <div class="feature-title">Advanced Analytics</div>
-          <div class="feature-desc">
-            Real-time market data and advanced charting tools
-          </div>
-        </div>
-        <div class="feature">
-          <div class="feature-icon">🔒</div>
-          <div class="feature-title">Secure Trading</div>
-          <div class="feature-desc">
-            Bank-level security for your funds and data
-          </div>
-        </div>
-        <div class="feature">
-          <div class="feature-icon">📱</div>
-          <div class="feature-title">Mobile Trading</div>
-          <div class="feature-desc">Trade anywhere with our mobile app</div>
-        </div>
-        <div class="feature">
-          <div class="feature-icon">🎯</div>
-          <div class="feature-title">Expert Support</div>
-          <div class="feature-desc">
-            24/7 customer support from trading experts
-          </div>
-        </div>
-      </div>
-
       <div class="contact">
         <h3>Get in Touch</h3>
         <div class="contact-info">
@@ -312,13 +283,10 @@
             <span>📧</span>
             <span>info@kasuwaforex.com</span>
           </div>
-          <div class="contact-item">
-            <span>📞</span>
-            <span>+234 XXX XXX XXXX</span>
-          </div>
+
           <div class="contact-item">
             <span>📍</span>
-            <span>Lagos, Nigeria</span>
+            <span> Nigeria</span>
           </div>
         </div>
       </div>
